[gd_scene load_steps=7 format=3 uid="uid://dgfpf7rgi4ty4"]

[ext_resource type="Script" path="res://carusel_menu/carusel_selection.gd" id="1_aas0s"]
[ext_resource type="Texture2D" uid="uid://bep6ltgwy5y21" path="res://assets/ui/icons/Arrow2.png" id="1_ecn2y"]
[ext_resource type="Texture2D" uid="uid://bwuf84ttv4ce8" path="res://tutorial_collection/unit_drag_and_drop/assets/archer single.png" id="2_am2ds"]
[ext_resource type="Texture2D" uid="uid://dmwt761t1xpcw" path="res://tutorial_collection/unit_drag_and_drop/assets/pawn single.png" id="3_0q44q"]
[ext_resource type="Texture2D" uid="uid://qcra56u5cuji" path="res://tutorial_collection/unit_drag_and_drop/assets/warrior.png" id="4_tfu86"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ejsg"]

[node name="CaruselSelection" type="Control"]
custom_minimum_size = Vector2(500, 280)
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 280.0
scale = Vector2(2.57, 2.57)
script = ExtResource("1_aas0s")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("1_ecn2y")

[node name="PreviousButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_3ejsg")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="ObjectContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 25

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
layout_mode = 2
theme_override_constants/margin_left = 70

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
layout_mode = 2
texture = ExtResource("2_am2ds")

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
layout_mode = 2
texture = ExtResource("3_0q44q")

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
layout_mode = 2
texture = ExtResource("4_tfu86")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
layout_mode = 2
theme_override_constants/margin_right = 70

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("1_ecn2y")
flip_h = true

[node name="NextButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_3ejsg")

[node name="HeroSelectionButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "SELECT HERO"

[node name="SelectionMarker" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -2.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TextureRect2/NextButton" to="." method="_on_next_button_pressed"]
